# REMI

./: .dockerignore  .env.example  .gitignore  .pre-commit-config.yaml  .secrets.baseline  BUILD_PLAN.md  DATA_MODEL.md  DECISIONS.md  README.md  SECURITY.md  docker-compose.host-ollama.yml  docker-compose.yml  pyproject.toml
adapters/: __init__.py
adapters/ai/: __init__.py  anthropic_api.py  base.py  bedrock.py  custom_http.py  ollama.py  ollama_manager.py  openai_api.py
adapters/blob/: __init__.py  base.py  filesystem.py  s3.py
adapters/storage/: __init__.py  base.py  dynamodb.py  sqlite.py
adapters/transcription/: __init__.py  base.py  none.py  whisper_api.py
api/: __init__.py  dependencies.py  main.py
api/routes/: __init__.py  briefs.py  frontend.py  interactions.py  loops.py  models.py  people.py  reminders.py
config/: __init__.py  settings.py
core/: __init__.py  models.py  version.py
core/prompts/: __init__.py  extraction.py  retrieval.py
deployments/aws/: README.md
deployments/local/: Dockerfile  README.md
docs/: ARCHITECTURE.md
frontend/: README.md
frontend/static/js/: capture.js  recorder.js  settings.js
frontend/templates/: base.html  brief.html  capture.html  people_list.html  people_search_results.html  person_detail.html  settings.html
tests/: README.md  __init__.py  test_anthropic_ai.py  test_api.py  test_filesystem_blob.py  test_frontend.py  test_models_api.py  test_ollama_ai.py  test_ollama_manager.py  test_prompts.py  test_reminders.py  test_settings.py  test_sqlite_storage.py  test_whisper_api.py
