[project]
name = "remi"
version = "0.1.0"
description = "REMI — Relationship Memory Intelligence. Open-source personal relationship intelligence tool."
readme = "README.md"
requires-python = ">=3.11"
license = { text = "TBD" }
authors = [
    { name = "Tyler" },
]

dependencies = [
    # Web framework
    "fastapi>=0.115.0",
    "uvicorn[standard]>=0.32.0",
    "python-multipart>=0.0.12",  # For form/file uploads

    # Configuration
    "pydantic>=2.9.0",
    "pydantic-settings>=2.6.0",

    # Storage
    "aiosqlite>=0.20.0",

    # Utilities
    "python-ulid>=3.0.0",
    "httpx>=0.27.0",  # Async HTTP client (used by Ollama, custom AI adapters)

    # AI providers
    "anthropic>=0.39.0",
    # ollama uses httpx, no SDK needed
    # openai stub in v1.0, will need "openai>=1.0.0" later
    # boto3 only needed for v1.1 cloud adapters

    # Transcription
    "openai>=1.0.0",  # for Whisper API; same SDK can do GPT later if added
]

[project.optional-dependencies]
dev = [
    "pytest>=8.0.0",
    "pytest-asyncio>=0.24.0",
    "pytest-cov>=5.0.0",
    "httpx>=0.27.0",  # also used in tests
    "ruff>=0.7.0",
    "black>=24.0.0",
    "mypy>=1.13.0",
    "detect-secrets>=1.5.0",
    "pip-audit>=2.7.0",
]

cloud = [
    # v1.1 dependencies — not installed by default
    "boto3>=1.35.0",
    "mangum>=0.19.0",
]

[build-system]
requires = ["setuptools>=61.0"]
build-backend = "setuptools.build_meta"

[tool.setuptools.packages.find]
include = ["core*", "adapters*", "api*", "config*"]

[tool.ruff]
line-length = 88
target-version = "py311"

[tool.ruff.lint]
select = [
    "E",   # pycodestyle errors
    "W",   # pycodestyle warnings
    "F",   # pyflakes
    "I",   # isort
    "B",   # flake8-bugbear
    "C4",  # flake8-comprehensions
    "UP",  # pyupgrade
    "S",   # flake8-bandit (security)
]
ignore = [
    "S101",  # assert used (fine in tests)
    "B008",  # Depends() in function defaults is standard FastAPI
]

[tool.ruff.lint.per-file-ignores]
"tests/**" = ["S"]  # security warnings less relevant in tests

[tool.black]
line-length = 88
target-version = ["py311"]

[tool.pytest.ini_options]
testpaths = ["tests"]
asyncio_mode = "auto"
addopts = "-v --cov=core --cov=adapters --cov=api --cov-report=term-missing"

[tool.mypy]
python_version = "3.11"
strict = true
warn_return_any = true
warn_unused_configs = true
ignore_missing_imports = true
